--- a/public/partitions/NavBar.ejs
+++ b/public/partitions/NavBar.ejs
@@ -9,10 +9,10 @@
           <button>Publicaciones</button>
           <div class="categorias-lista" id="publicacionesLista">
             <ul>
-              <li><button>*Arquitectura</button></li>
-              <li><button>*Carpintería</button></li>
-              <li><button>*Interiores</button></li>
-              <li><button>*Moda</button></li>
+              <li><a href="/category/architecture">*Arquitectura</a></li>
+              <li><a href="/category/carpentry">*Carpintería</a></li>
+              <li><a href="/category/interiors">*Interiores</a></li>
+              <li><a href="/category/fashion">*Moda</a></li>
             </ul>
           </div>
         </li>
@@ -20,10 +20,10 @@
           <button>Vendedores</button>
           <div class="categorias-lista" id="vendedoresLista">
             <ul>
-              <li><button>*Arquitectura</button></li>
-              <li><button>*Carpintería</button></li>
-              <li><button>*Interiores</button></li>
-              <li><button>*Moda</button></li>
+              <li><a href="/sellers/architecture">*Arquitectura</a></li>
+              <li><a href="/sellers/carpentry">*Carpintería</a></li>
+              <li><a href="/sellers/interiors">*Interiores</a></li>
+              <li><a href="/sellers/fashion">*Moda</button></li>
             </ul>
           </div>
         </li>
@@ -46,7 +46,7 @@
 <nav class="FotoPerfil">
   <ul>
     <li>
-      <a href="">
+      <a href="/editProfile/<%= profile%>">
         <button>
           <img class="Foto" src="../pictures/Profile.png" alt="" />
         </button>
