--- a/public/partitions/Seller.ejs
+++ b/public/partitions/Seller.ejs
@@ -9,10 +9,10 @@
           <button>Publicaciones</button>
           <div class="categorias-lista" id="publicacionesLista">
             <ul>
-              <li><button class="productsList">*Arquitectura</button></li>
-              <li><button class="productsList">*Carpintería</button></li>
-              <li><button class="productsList">*Interiores</button></li>
-              <li><button class="productsList">*Moda</button></li>
+              <li><a href="/category/architecture">*Arquitectura</a></li>
+              <li><a href="/category/carpentry">*Carpintería</a></li>
+              <li><a href="/category/interiors">*Interiores</a></li>
+              <li><a href="/category/fashion">*Moda</a></li>
             </ul>
           </div>
         </li>
@@ -20,16 +20,15 @@
           <button>Vendedores</button>
           <div class="categorias-lista" id="vendedoresLista">
             <ul>
-              <li><button class="sellerList">*Arquitectura</button></li>
-              <li><button class="sellerList">*Carpintería</button></li>
-              <li><button class="sellerList">*Interiores</button></li>
-              <li><button class="sellerList">*Moda</button></li>
+              <li><a href="/sellers/architecture">*Arquitectura</a></li>
+              <li><a href="/sellers/carpentry">*Carpintería</a></li>
+              <li><a href="/sellers/interiors">*Interiores</a></li>
+              <li><a href="/sellers/fashion">*Moda</a></li>
             </ul>
           </div>
         </li>
       </ul>
     </li>
-
     <li>
       <a href="/Chats">
         <button>Chats</button>
