--- a/public/profile/index.ejs
+++ b/public/profile/index.ejs
@@ -46,7 +46,7 @@
           <%}%>
 
           <section class="chatyreport">
-            <a href="">
+            <a href="/chats/<%= data.Email%>">
               <button class="chat">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
