decima version del backend

--- a/public/CreatePosts/index.ejs
+++ b/public/CreatePosts/index.ejs
@@ -23,7 +23,6 @@
         </div>
         <div class="flex-container">
           <form
-            method="post"
             enctype="multipart/form-data"
             id="CreatePost"
             class="form-container"
@@ -100,10 +99,10 @@
               <label for="imagenes" class="label">Imagenes y/o diseño 3D</label>
               <div class="input-container">
                 <input
-                  id="imagenesModelo3d"
-                  name="imagenesModelo3d"
+                  id="files"
+                  name="files"
                   type="file"
-                  multiple
+                  multiple="true"
                   class="input"
                 />
               </div>
