--- a/public/partitions/NavBar.ejs
+++ b/public/partitions/NavBar.ejs
@@ -43,14 +43,19 @@
   </ul>
 </nav>
 
-<nav class="FotoPerfil">
+
+<div class="FotoPerfil">
   <ul>
-    <li>
-      <a href="/editProfile/<%= profile%>">
-        <button>
-          <img class="Foto" src="../pictures/Profile.png" alt="" />
-        </button>
-      </a>
-    </li>
+      <li>
+          <button>
+            <img class="Foto" src="../pictures/Profile.png" alt="" />
+          </button>
+        </li>
+      <li class="perfil-options">
+          <ul class="opciones-lista">
+              <li><button>Configuración</button></li>
+              <li><button>Cerrar Sesión</button></li>
+          </ul>
+      </li>
   </ul>
-</nav>
+</div>
