--- a/public/partitions/Seller.ejs
+++ b/public/partitions/Seller.ejs
@@ -42,14 +42,20 @@
   </ul>
 </nav>
 
-<nav class="FotoPerfil">
+<div class="FotoPerfil">
   <ul>
     <li>
-      <a href="">
-        <button>
-          <img class="Foto" src="../pictures/Profile.png" alt="" />
-        </button>
-      </a>
+      <button>
+        <img class="Foto" src="../pictures/Profile.png" alt="" />
+      </button>
+    </li>
+    <li class="perfil-options">
+      <ul class="opciones-lista" style="margin-top: 50%">
+        <li>
+          <a href="/editProfile"><button>Configuración</button></a>
+        </li>
+        <li><button>Cerrar Sesión</button></li>
+      </ul>
     </li>
   </ul>
-</nav>
+</div>
