--- a/public/MainPage/style.css
+++ b/public/MainPage/style.css
@@ -265,23 +265,13 @@ header {
   transform: translateY(-2px);
 }
 
-.Foto {
-  background: #0a1319;
-  width: 45px;
-  height: 45px;
-  border-radius: 50px;
-  margin: 0;
-  border: 2px solid #0a1319;
-  object-fit: cover;
-}
-
 .FotoPerfil {
   margin-top: -15px;
   width: 200px;
   justify-content: center;
   align-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .FotoPerfil ul {
@@ -291,6 +281,16 @@ header {
   align-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.Foto {
+  background: #0a1319;
+  width: 45px;
+  height: 45px;
+  border-radius: 50px;
+  margin: 0;
+  border: 2px solid #0a1319;
+  object-fit: cover;
 }
 
 .FotoPerfil li {
@@ -309,15 +309,57 @@ header {
   cursor: pointer;
   outline: none;
   text-decoration: none;
-  color: #a7a7a7;
   transition: color 0s ease;
 }
 
 .FotoPerfil button:hover {
-  color: white;
   transform: translateY(-2px);
 }
 
+.FotoPerfil .perfil-options {
+  margin-top: -2px;
+  text-align: center;
+  list-style: none;
+  justify-content: center;
+  display: flex;
+  width: 120px;
+}
+
+.FotoPerfil .perfil-options ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 120px;
+}
+
+.FotoPerfil .perfil-options li {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  margin-top: 5px;
+  margin-right: 43px;
+  width: 150px;
+}
+
+.FotoPerfil .perfil-options button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  font-weight: 900;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  color: white;
+  transition: color 0s ease;
+}
+
+.FotoPerfil .perfil-options button:hover {
+  transform: translateY(-2px);
+}
 #searchBox {
   display: block;
   position: relative;
