--- a/public/partitions/NavBar.ejs
+++ b/public/partitions/NavBar.ejs
@@ -23,7 +23,7 @@
               <li><a href="/sellers/architecture">*Arquitectura</a></li>
               <li><a href="/sellers/carpentry">*Carpintería</a></li>
               <li><a href="/sellers/interiors">*Interiores</a></li>
-              <li><a href="/sellers/fashion">*Moda</button></li>
+              <li><a href="/sellers/fashion">*Moda</a></li>
             </ul>
           </div>
         </li>
@@ -43,19 +43,22 @@
   </ul>
 </nav>
 
-
 <div class="FotoPerfil">
   <ul>
-      <li>
-          <button>
-            <img class="Foto" src="../pictures/Profile.png" alt="" />
-          </button>
+    <li>
+      <button>
+        <img class="Foto" src="../pictures/Profile.png" alt="" />
+      </button>
+    </li>
+    <li class="perfil-options">
+      <ul class="opciones-lista">
+        <li>
+          <a href="/editProfile">
+            <button>Configuración</button>
+          </a>
         </li>
-      <li class="perfil-options">
-          <ul class="opciones-lista">
-              <li><button>Configuración</button></li>
-              <li><button>Cerrar Sesión</button></li>
-          </ul>
-      </li>
+        <li><button>Cerrar Sesión</button></li>
+      </ul>
+    </li>
   </ul>
 </div>
