--- a/public/signUp/index.ejs
+++ b/public/signUp/index.ejs
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&family=Roboto:ital,wght@0,100;1,900&family=Sulphur+Point:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="./signUp/style.css" />
+    <link rel="stylesheet" type="text/css" href="../signUp/style.css" />
   </head>
   <body>
     <div class="main-container"></div>
@@ -105,6 +105,7 @@
             <button type="submit" class="button">Sign up</button>
           </div>
         </form>
+        <p id="error" class="errorSingUp" style="display: none;"></p>
 
         <p class="message">
           Already a member?
@@ -112,6 +113,6 @@
         </p>
       </div>
     </div>
-    <script src="./signUp/main.js"></script>
+    <script src="../signUp/main.js"></script>
   </body>
 </html>
