--- a/public/accountSeller/index.ejs
+++ b/public/accountSeller/index.ejs
@@ -82,6 +82,20 @@
           </div>
 
           <div class="form-group">
+            <label for="confirm-password" class="label">Profesion</label>
+            <div class="input-container">
+              <input
+                id="profession"
+                name="profession"
+                type="text"
+                required
+                class="input"
+              />
+            </div>
+          </div>
+
+
+          <div class="form-group">
             <button type="submit" class="button">Registrar</button>
           </div>
         </form>
