--- a/public/logIn/index.ejs
+++ b/public/logIn/index.ejs
@@ -56,6 +56,8 @@
           Not a member?
           <a href="/CreateAccount" class="link">Sign up.</a>
         </p>
+
+        <p id="error" class="errorLogIn" style="display: none;"></p>
       </div>
     </div>
     <script src="./logIn/main.js"></script>
