--- a/public/signUp/style.css
+++ b/public/signUp/style.css
@@ -118,6 +118,12 @@ body {
   color: #1d4ed8;
 }
 
-.error {
-  color: rgb(247, 15, 15);
+.errorSingUp{
+  background: rgb(255, 51, 51);
+color: #ffffff;
+border-radius: 15px;
+height: 30px;
+display: flex;
+align-items: center;
+justify-content: center;
 }
